remove old deprced cod